# qad_automate

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-build.yml
config/: config.yaml  googlesheet_urls.yaml  programmed_executions.yaml
docs/: README.md
qad_automate/: commands.py  config.py  main.py  qad_login.py  qad_menus.py  qad_ssh.py  sheets.py  utils.py
scripts/: generalized_codes.py  main_old.py  pexpect_test.py  test.py
src/: config.py  main.py  qad_login.py  qad_menus.py  qad_ssh.py  scheduler.py  sheets.py  utils.py
src/menus/: menu_16_3_23.py  menu_61_3_16.py  menu_9_2_2_old.py
