[metadata]
name = qad_automate
version = 0.1.0
author = <Joaquin Tapia Riquelme>
author_email = joaquintapia.inf@gmail.com
description = A package to automate data entering into QAD Enterprise Applications
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

[options.packages.find]
include = qad_automate